--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,5 @@
 __pycache__/
 *.pyc
 app/__pycache__/client.cpython-312.pyc
+app/__pycache__/__init__.cpython-312.pyc
+app/__pycache__/client.cpython-312.pyc
