--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,10 @@
-*.pyc
+# Python Bytecode
 __pycache__/
-*.pyc
-app/__pycache__/client.cpython-312.pyc
-app/__pycache__/__init__.cpython-312.pyc
-app/__pycache__/client.cpython-312.pyc
+*.py[cod]
+
+# VSCode
+.vscode/
+
+# Virtual environments
+env/
+venv/
